# MIE443

mie443_contest1 Jan27/: CMakeLists.txt
mie443_contest1 Jan27/src/: C  contest1.cpp
mie443_contest1/src/: contest1.cpp
mie443_contest2/lerobot_controller/: CMakeLists.txt
mie443_contest2/lerobot_controller/scripts/: so101_bridge.py  so101_test.py  teleop_follower.py  teleop_leader.py
mie443_contest2/lerobot_moveit/launch/: so101_laptop.launch.py  so101_real.launch.py  so101_turtlebot.launch.py
mie443_contest2/mie443_contest2/: CMakeLists.txt  contest2_results.txt  launch_all.sh  package.xml
mie443_contest2/mie443_contest2/boxes_database/: myhal_scene.xml
mie443_contest2/mie443_contest2/config/: apriltag_config.yaml  arm_poses.yaml  nav2.yaml
mie443_contest2/mie443_contest2/include/mie443_contest2/: arm_controller.h  navigation.h  yoloInterface.h
mie443_contest2/mie443_contest2/launch/: apriltag_oakd.launch.py  contest2.launch.py
mie443_contest2/mie443_contest2/maps/: Contest2MapPractice.yaml
mie443_contest2/mie443_contest2/src/: apriltag_detector.cpp  arm_controller.cpp  contest2.cpp  image_capture_server.cpp  navigation.cpp  yoloInterface.cpp  yolo_detector.py
mie443_contest2/mie443_contest2/srv/: DetectObject.srv
src/: Notes.txt
src/mie443_contest1/: package.xml
src/mie443_contest1/include/: eStop.h
src/mie443_contest1/src/: contest1.cpp
src/mie443_contest1/worlds/: practice_scene1.pgm  practice_scene1.yaml
