<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mie443_contest1</name>
  <version>1.0.0</version>
  <description>MIE443 Contest 1, Autonomous Exploration</description>

  <maintainer email="user@todo.todo">Your Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- TurtleBot4 specific -->
  <depend>irobot_create_msgs</depend>

  <!-- TF2 for coordinate transformations -->
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Image processing (if needed for future expansion) -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- Launch files -->
  <exec_depend>launch_ros</exec_depend>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
